package Sistema;

public enum Tipo {
    LIKE
}